ansible-setup.txt
| absible setup

для начала нужно пойти в python.txt и прочитать в самом верху первую тему как устроен питон.
после этого:

создаем автономный инстанс питона

	$ python -m venv ~/.venv/ansible2

активируем его 

	$ source ~/.venv/ansible2/bin/activate

так как ансибль это всего навсего модуль-пакет питона то ставим его через менеджер
модулей pip

    $ python -m pip install ansible


готоово.


что интересно. врезультате установки пакета мы получим нетолько устанолвенный 
ансибль питон модуль-пакет. но мы получим и некий фронтенд запускающий файл ансибля тоже
на питоне.
я щас покажу. 
вот где у нас лежит ансибль питоне модуль-пакет

	$ python
	>>> import ansible
	>>> ansible.__file__
		'~/.venv/ansible2/lib/python3.12/site-packages/ansible/__init__.py'

здесь "~/.venv/ansible2/" это папка где через venv создана автономная копия питон
интерпретатора с некоторым количеством предустановленных модулей. 

ксатти модуль-пакетов у нас на самом деле два!

	$ pip list | grep ansible
	ansible      10.5.0
	ansible-core 2.17.5


тот что я показал выше это модуль ansible

теперь посмотрим на тот который ansible-core
ну вот тут опять непонятная залупа

(ansible2)  $ python
>>> import ansible-core
  File "<stdin>", line 1
    import ansible-core
                  ^
SyntaxError: invalid syntax


типа нет такого модуля. хотят pip показывает что есть.
если я зайду в папку site-packages где наверно записываются модули питона то
я там увижу вот такие папки

./ansible
./ansible_test
./ansible_core-2.17.5.dist-info
./ansible_collections
./ansible-10.5.0.dist-info

так вот если это модуль-папка то внутри должен лежать файл __init__.py
он есть только в папках 

./ansible
./ansible_test

получается все остальное хуйня какаято непонятная.
полуичим инфо через pip

python -m pip inspect  ansible-core  | grep "metadata_location" | grep ansible
	...
	...
      "metadata_location": "/home/noroot/.venv/ansible2/lib/python3.12/site-packages/ansible_core-2.17.5.dist-info",
      "metadata_location": "/home/noroot/.venv/ansible2/lib/python3.12/site-packages/ansible-10.5.0.dist-info",

опять же повторю в папке ansible_core-2.17.5.dist-info нет __init__.py 
так что это не модуль-пакет а хуйня какаято.
внутри этой папки вобще нихрена почти нет

	COPYING
	entry_points.txt
	INSTALLER
	METADATA
	RECORD
	top_level.txt
	WHEEL

архитектура питона - это пиздец какой колхоз
итак pip нам поставил две сущности "ansible" и "ansible-core" 
но с точки зрения питона у нас нет модуля-пакета ansible-core, есть такая папка с не
понятным содержимым. но эта папка это точно не модуль-пакет.
и есть модуль-пакет ansible
а еще появился модуль-пакет ansible_test 


далее ансибль в привычном смысле запускается не путем вызова модуля. нет. нихуя.
ансибль запускается через фронтенд файл тоже на питоне написанный. 
он лежит вот тут 

	$ which ansible
		~/.venv/ansible2/bin/ansible
	(ansible2) $ file  $(which ansible)
		~/.venv/ansible2/bin/ansible: Python script, ASCII text executable


как я уже говорил что в для питон интепретатора любой тектовый файл внутри которого питон
портянка является модуль-файлом. но однако у питона есть переенная в которой указаны папки 
в которых он модули ищет. поэтому питон скрипт файл который лежит вне этих папок это наверное
формально не модуль. а просто питон скрипт файл. 

если мы закрыли терминал. то нам нужно опять активировать автономный питон. и только
потом рабооать с модулями или питон сриптами если мы хотим чтобы их исполнял именно
атономный модуль а не системный питон
активируем это как указано выше вот так

		$ source ~/.venv/ansible2/bin/activate

что еще раз подчеркну интересно это то что установка ансибля через pip приводит к тому
что у нас нетоллько модуль или модули питона устанавливаются. у нас еще создается фронтенд
файл запуска ансибля (тоже на питоне). так вот далее для работы с ансиблем мы неюзаем
модуль питона тоесть вот так делать ненадо
 
  $ python -m ansible ....

а нужно юзать фронтенд ансибль файл

  $ ~/.venv/ansible2/bin/ansible .....

тоесть полный набор команд

		$ source ~/.venv/ansible2/bin/activate
    (ansible 2 )  $   ~/.venv/ansible2/bin/ansible ....
так как команда source у нас меняет $PATh то можно ансибль запускать без укаания полного пути
    (ansible 2 )  $   ansible ....

вот такая ебала с питоном и ансиблем. 

итак наконец мы установили ансибль 


